--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -16,11 +16,14 @@ ENV NODE_ENV production
 
 WORKDIR /usr/src/app
 
-# Скопировать package.json и package-lock.json в отдельный слой
-COPY package.json package-lock.json ./
-
-# Установить зависимости (если package.json или package-lock.json не изменились, этот шаг берётся из кеша)
-RUN npm ci --omit=dev
+# Download dependencies as a separate step to take advantage of Docker's caching.
+# Leverage a cache mount to /root/.npm to speed up subsequent builds.
+# Leverage a bind mounts to package.json and package-lock.json to avoid having to copy them into
+# into this layer.
+RUN --mount=type=bind,source=package.json,target=package.json \
+    --mount=type=bind,source=package-lock.json,target=package-lock.json \
+    --mount=type=cache,target=/root/.npm \
+    npm ci --omit=dev
 
 # Run the application as a non-root user.
 USER node
