--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,7 +72,7 @@ build-image:
       ssh -i $ID_ED25519 -o StrictHostKeyChecking=no $DEPLOY_USER@$DEPLOY_HOST
       "cd $PROJECT_DIR &&
       echo TAG_COMMIT=${TAG_COMMIT} > .env &&
-      echo VERSION=${CI_COMMIT_SHORT_SHA} > .env &&
+      echo VERSION=${CI_COMMIT_SHORT_SHA} >> .env &&
       echo BOT_TOKEN=${BOT_TOKEN} >> .env &&
       docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY &&
       docker compose up -d --force-recreate &&
