add configuration file and name command

--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -16,6 +16,8 @@ services:
       - .env
     environment:
       NODE_ENV: production
+    volumes:
+      - ./config:/usr/src/app/config
 #    ports:
 #      - 3000:3000
 
