--- a/.dockerignore
+++ b/.dockerignore
@@ -4,6 +4,10 @@
 # For more help, visit the .dockerignore file reference guide at
 # https://docs.docker.com/go/build-context-dockerignore/
 
+#from project
+config
+
+#from docker init
 **/.classpath
 **/.dockerignore
 **/.env
