--- a/compose.yaml
+++ b/compose.yaml
@@ -5,5 +5,6 @@ services:
       - .env
     environment:
       NODE_ENV: production
+    restart: unless-stopped
     volumes:
       - ./config:/usr/src/app/config
